--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,29 +3,38 @@ owner: upptime # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-
+  - name: Thonk
+    url: https://www.thonk.xyz
+  - name: Thonk Minecraft
+    url: https://www.thonk.xyz
+  - name: Thonk Status Page
+    url: https://www.thonk.xyz
+  - name: Thonk Cloud
+    url: https://www.thonk.xyz
+  - name: Sonarr
+    url: https://sonarr.thonk.xyz
+  - name: Radarr
+    url: https://radarr.thonk.xyz
+  - name: Transmission
+    url: https://transmission.thonk.xyz
+  - name: Netdata
+    url: https://netdata.thonk.xyz
+  - name: Tautulli
+    url: https://tautulli.thonk.xyz
+  - name: Files
+    url: https://files.thonk.xyz
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: uptime.thonk.xyz
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "Thonk Global Cloud Uptime Monitor"
+  introMessage: cloud@thonk.xyz
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
