--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,19 +10,24 @@ sites:
   - name: Thonk Status Page
     url: https://www.thonk.xyz
   - name: Thonk Cloud
-    url: https://www.thonk.xyz
+    url: https://www.thonk.cloud
   - name: Sonarr
     url: https://sonarr.thonk.xyz
   - name: Radarr
     url: https://radarr.thonk.xyz
   - name: Transmission
     url: https://transmission.thonk.xyz
+    expectedStatusCodes:
+      - 200
+      - 401
   - name: Netdata
     url: https://netdata.thonk.xyz
   - name: Tautulli
     url: https://tautulli.thonk.xyz
   - name: Files
     url: https://files.thonk.xyz
+  - name: Skippy Cloud
+    url: $SKIPPY_URL
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
@@ -30,8 +35,8 @@ status-website:
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
-  introTitle: "Thonk Global Cloud Uptime Monitor"
-  introMessage: cloud@thonk.xyz
+  introTitle: "Thonk Global Cloud Services Uptime Monitor"
+  introMessage: For cloud platform status, see https://status.thonk.xyz. Contact: cloud@thonk.xyz
   navbar:
     - title: Status
       href: /
